# OpenRSS

./: .env.example  .gitignore  MIT-LICENSE  README.md  docker-compose.yml  renovate.json
.github/: release.yml
api/: .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
api/apps/rss/: admin.py  apps.py  models.py  urls.py  views.py
api/apps/rss/fixtures/: main_feed.json
api/apps/rss/migrations/: 0001_initial.py  0002_alter_mainfeed_slug.py
api/config/: settings.py  urls.py
api/config/settings/: base.py  local.py  production.py  shared.py  test.py
nginx/: Dockerfile  cache.conf  https.conf  main.conf  nginx.conf  proxy.conf  server.conf
web/: Dockerfile  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js
web/components/: TheButton.vue  TheLogo.vue  TheRSSEntry.vue
web/components/side-menu/: MenuLink.vue  SideMenu.vue
web/components/the-header/: TheHeader.vue
web/pages/: [slug].vue  index.vue
web/store/: sidemenu.ts
web/types/: Rss.d.ts
