[tool.poetry]
name = "openrss-api"
version = "0.1.0"
description = "OpenRSS API"
authors = ["Mark Likhachev <gogomecourier@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.1"
djangorestframework = "3.14.0"
psycopg = "3.1.9"
python-dotenv = "1.0.0"
uvicorn = "0.22.0"
aiohttp = "3.8.4"
adrf = "0.1.1"
gunicorn = "20.1.0"
feedparser = "6.0.10"
psycopg2-binary = "2.9.6"
hiredis = "2.2.3"

[tool.black]
extend-exclude = '''
(
  migrations/
)
'''

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
